--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.8",
+    "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc-66855b96-20241106",
