--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc-66855b96-20241106",
-    "react-dom": "^19.0.0-rc-66855b96-20241106"
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
