--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.0.0-rc-66855b96-20241106",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-icons": "^5.4.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/yup": "^0.29.14",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
     "glob": "^11.0.0",
