--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
