--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-color-circle": "^2.3.4",
     "axios": "^1.7.8",
+    "cloudinary": "^2.5.1",
+    "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
@@ -17,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
     "react-icons": "^5.4.0",
+    "react-select": "^5.9.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
