--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
-
     "dotenv": "^16.4.7",
-
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
@@ -24,6 +22,7 @@
     "sweetalert2": "^11.15.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
