--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "sweetalert2": "^11.15.0"
   },
