--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.8",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
@@ -20,7 +22,8 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
-    "sweetalert2": "^11.15.0"
+    "sweetalert2": "^11.15.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
