--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-toastify": "^11.0.2",
     "sweetalert2": "^11.15.0",
     "yup": "^1.6.1"
