--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.17.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.0.3",
     "glob": "^11.0.0",
     "postcss": "^8",
     "rimraf": "^6.0.1",
