--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-toastify": "^11.0.2",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.0",
     "yup": "^1.6.1"
   },
