--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@react-spring/web": "^9.7.5",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.8",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.17.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
