--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.0.3",
     "glob": "^11.0.0",
